# rust_di

./: .gitignore  Cargo.toml  README.md  example.txt
.cargo/: config.toml
.github/workflows/: rust.yml
di_macros/: Cargo.toml
di_macros/src/: lib.rs  main_macro.rs  register_macros.rs  with_di_scope.rs
macros/with_di_scope/: Cargo.toml
macros/with_di_scope/src/: lib.rs
macros/with_di_scope/tests/: macro_tests.rs
macros/with_di_scope/tests/ui/: access_scope.rs  basic_usage.rs  non_async_fn.rs  non_async_fn.stderr
src/: lib.rs  test_utils.rs
src/core/: contracts.rs  di_inventory.rs  error_di.rs  factory.rs  mod.rs  registry.rs
src/core/tests/: mod.rs  registry_scoped.rs  registry_singleton.rs  registry_transient.rs
