[package]
name = "di"
version = "1.0.0"
edition = "2024"

[dependencies]
di_macros = { path = "./di_macros" }
tokio = { version = "1.46", features = ["full"] }
arc-swap = "1.7"
dashmap = "7.0.0-rc2"
thiserror = "2.0"
async-trait = "0.1"
once_cell = "1.21"
ctor = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
