[package]
name = "di_macros"
version = "4.1.0"
edition = "2024"
license = "MIT"
authors = ["Bordunos Pavel <bordunos.p@gmail.com>"]
repository = "https://github.com/bordunosp/rust_di"
description = "DI — Dependency Injection for Rust"

[lib]
proc-macro = true

[dependencies]
inventory = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
